syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/type/latlng.proto";

package systems.ajax.motrechko.airguardian.commonresponse.event;

option java_multiple_files = true;

enum EmergencyEventType {
  UNKNOWN = 0;
  ROBBERY = 1;
  FIRE = 2;
  SHOOTING = 3;
  OTHER = 4;
}

enum EmergencyEventStatus {
  NEW = 0;
  PROCESSING = 1;
  SEARCH_DRONE = 2;
  DRONE_ON_THE_WAY = 3;
  UNDER_SUPERVISION = 4;
  FAKE = 5;
  FINISHED = 6;
}

message EmergencyEvent {
  optional string id = 1;
  EmergencyEventType event_type = 2;
  google.type.LatLng location = 3;
  google.protobuf.Timestamp timestamp = 4;
  string description = 5;
  EmergencyEventStatus event_status = 6;
  string drone_id = 7;
}
